deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zy-workload-app
  labels:
    app: zy-workload-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: zy-workload-app
  template:
    metadata:
      labels:
        app: zy-workload-app
    spec:
      containers:
        - name: app
          image: mintplexlabs/anythingllm
          ports:
            - name: openwebui
              containerPort: 8080
            - name: anythingllm
              containerPort: 3001
