service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zy-workload-app
  labels:
    app: zy-workload-app
spec:
  type: ClusterIP
  selector:
    app: zy-workload-app
  ports:
    - name: http
      port: 8080
      targetPort: anythingllm
      protocol: TCP
