ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zy-workload-app
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: kommander-traefik
  # tls:
  #   - hosts:
  #       - "*.ntnxlab.local"
  #     secretName: nutanix-aiuat-local-ca
  rules:
  - host: openwebui.ntnxlab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zy-workload-app
            port:
              number: 8080
